--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "utility": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "*.ipp": "cpp"
     }
 }
